<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--Password title-->
    <EditText
        android:id="@+id/editTextPasswordTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start"
        android:autofillHints="false"
        android:background="@null"
        android:inputType="text"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/switchShowHidePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields"
        tools:text="password title " />

    <!--Password-->
    <EditText
        android:id="@+id/editTextPasswordValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start"
        android:autofillHints="false"
        android:background="@null"
        android:inputType="textPassword"
        android:textSize="@dimen/text_normal"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/switchShowHidePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordTitle"
        tools:ignore="LabelFor"
        tools:text="password value " />

    <!--Show/hide checkbox-->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchShowHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iconSavePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardview_margin_start"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/description_save_password"
        android:src="@drawable/ic_save_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordValue" />

    <ImageButton
        android:id="@+id/iconDeletePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_delete_password"
        android:src="@drawable/ic_delete_black_24"
        app:layout_constraintStart_toEndOf="@+id/iconSavePassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordValue" />

</androidx.constraintlayout.widget.ConstraintLayout>