<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_generator">

    <fragment
        android:id="@+id/navigation_generator"
        android:name="gparap.apps.password.ui.generator.GeneratorFragment"
        android:label="@string/title_generator"
        tools:layout="@layout/fragment_generator" />

    <fragment
        android:id="@+id/navigation_evaluator"
        android:name="gparap.apps.password.ui.evaluator.EvaluatorFragment"
        android:label="@string/title_evaluator"
        tools:layout="@layout/fragment_evaluator" />

    <fragment
        android:id="@+id/navigation_manager"
        android:name="gparap.apps.password.ui.manager.ManagerFragment"
        android:label="@string/title_manager"
        tools:layout="@layout/fragment_manager" />
</navigation>